src/test/deca/syntax/invalid/bool_float.deca
// Description :
// double decalration

// Resultats :
// Erreur contextuelle


{
    boolean float x;
}